2.21.6
 - fix: persist feature selection in QuickView when switching data slots (#206)
2.21.5
 - fix: disable table graphs widget when an image-type table is shown
 - fix: accessing table data from DCOR
 - enh: do not keep dataset references in QuickView, only remember IDs
 - enh: use bulk emodulus computation as viscosity calculator
 - setup: bump dclab to 0.62.13
2.21.4
 - fix: incorrect path list check when loading broken dataset
 - fix: duplicate filters via block matrix results in AttributeError (#184)
 - fix: plot sizes chaotic due to improper use of setFixedSize (#176)
 - fix: plot size not set correctly when loading session
 - fix: base automated plot size adjustment on minimal plot dimensions (#180)
 - docs: update screenshot scripts and refresh screenshots
 - enh: allow to change plot window size via edge handles (#51)
 - setup: migrate pyqtgraph from 0.13.3 to 0.13.6 (#109)
2.21.3
 - enh: support displaying unnamed table data
 - setup: bump dclab to 0.62.11
2.21.2
 - fix: signal race condition when editing filters in AnalysisView (#148)
 - fix: signal race condition when editing plots in AnalysisView (#172)
 - enh: use QuickView selection to navigate AnalysisView slots and filters
 - enh: when batch-loading datasets, allow individual files to fail
 - enh: auto-select logs in AnalysisView
 - enh: improve table graph selection (remember graph, clear if unavailable)
2.21.1
 - fix: maximize image size in QuickView
 - fix: colormap for QPI data only updating for one image view in QuickView
 - ref: QuickView code needed tidying up
2.21.0
 - feat: implement showing dataset basins in the analysis view (#182)
 - feat: implement showing dataset logs in the analysis view (#140)
 - feat: implement showing dataset tables in the analysis view (#141)
 - enh: more Quick View default choices than "deform" and "area_um"
 - enh: update icon theme
 - docs: document new features in Analysis View
 - setup: pygments (for json formatting) is now an explicit dependency